--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Tobiloba Personal Portfolio</title>
-    <meta name="description" content="Responsive Tailwind CSS Template">
+    <!-- <meta name="description" content="Responsive Tailwind CSS Template"> -->
     <meta name="keywords" content="Onepage, creative, modern, Tailwind CSS, multipurpose, clean">
     <meta name="author" content="Shreethemes">
     <meta name="website" content="https://shreethemes.in/">
