--- a/index.html
+++ b/index.html
@@ -966,12 +966,12 @@ I emphasized clean layouts, consistent branding, accessible design, and mobile r
         <!-- Switcher -->
 
         <!-- LTR & RTL Mode Code -->
-        <div class="fixed top-[40%] -right-3 z-50">
+        <!-- <div class="fixed top-[40%] -right-3 z-50">
             <a href="#" id="switchRtl">
                 <span class="py-1 px-3 relative inline-block rounded-t-md -rotate-90 bg-white dark:bg-slate-900 shadow-md dark:shadow-sm dark:shadow-gray-800 font-medium rtl:block ltr:hidden" >LTR</span>
                 <span class="py-1 px-3 relative inline-block rounded-t-md -rotate-90 bg-white dark:bg-slate-900 shadow-md dark:shadow-sm dark:shadow-gray-800 font-medium ltr:block rtl:hidden">RTL</span>
             </a>
-        </div>
+        </div> -->
         <!-- LTR & RTL Mode Code -->
 
         <!-- JAVASCRIPTS -->
