--- a/index.html
+++ b/index.html
@@ -55,15 +55,15 @@
                     <!-- Navbar Button -->
                     <ul class="list-none menu-social mb-0">
                         <li class="inline">
-                            <a href="#">
+                            <a href="https://wa.me/+2348133708340">
                                 <span class="login-btn-primary"><span class="btn btn-icon btn-sm rounded-full bg-amber-500 hover:bg-amber-600 border-amber-500 hover:border-amber-600 text-green-800"><i class="fa-brands fa-whatsapp"></i></span></span>
                                 <span class="login-btn-light"><span class="btn btn-icon btn-sm rounded-full bg-gray-50 hover:bg-gray-200 text-green-800 dark:text-white dark:bg-slate-900 dark:hover:bg-gray-700 border-gray-100 dark:border-gray-700"><i class="fa-brands fa-whatsapp"></i></span></span>
                             </a>
-                            <a href="#">
+                            <a href="https://www.facebook.com/share/19bVikVva1/">
                                 <span class="login-btn-primary"><span class="btn btn-icon btn-sm rounded-full bg-amber-500 hover:bg-amber-600 border-amber-500 hover:border-amber-600 text-white"><i class="fa-brands fa-facebook"></i></span></span>
                                 <span class="login-btn-light"><span class="btn btn-icon btn-sm rounded-full bg-gray-50 hover:bg-gray-200 text-slate-900 dark:text-white dark:bg-slate-900 dark:hover:bg-gray-700 border-gray-100 dark:border-gray-700"><i class="fa-brands fa-facebook"></i></span></span>
                             </a>
-                            <a href="#">
+                            <a href="https://www.instagram.com/titobioluwa__?igsh=a2t4am9od2p1dTNk">
                                 <span class="login-btn-primary"><span class="btn btn-icon btn-sm rounded-full bg-amber-500 hover:bg-amber-600 border-amber-500 hover:border-amber-600 text-white"><i class="fa-brands fa-instagram"></i></span></span>
                                 <span class="login-btn-light"><span class="btn btn-icon btn-sm rounded-full bg-gray-50 hover:bg-gray-200 text-slate-900 dark:text-white dark:bg-slate-900 dark:hover:bg-gray-700 border-gray-100 dark:border-gray-700"><i class="fa-brands fa-instagram"></i></span></span>
                             </a>
@@ -132,21 +132,29 @@
 
                     </div>
 
-                    <div class="relative">
-                        <img src="assets/images/hero/2.png" alt="">
+                    <div class="relative rounded-lg overflow-hidden">
+    <!-- Image -->
+    <img src="assets/images/hero/dp.jpg" alt="" class="w-full h-auto object-cover" />
 
-                        <div class="absolute lg:bottom-20 md:bottom-10 bottom-2 ltr:md:-left-5 ltr:left-2 rtl:md:-right-5 rtl:right-2 p-4 rounded-lg shadow-md dark:shadow-gray-800 bg-white dark:bg-slate-900 m-3 w-44 text-center">
-                            <span class="text-3xl font-medium mb-0"><span class="counter-value font-bold" data-target="125">1</span>+</span>
-                            <h6 class="text-sm text-slate-400 mt-1 font-semibold">Project Completed</h6>
-                        </div>
+    <!-- Project Completed Box -->
+    <div class="absolute lg:bottom-20 md:bottom-10 bottom-2 ltr:md:-left-5 ltr:left-2 rtl:md:-right-5 rtl:right-2 
+                p-4 rounded-lg shadow-md dark:shadow-gray-800 bg-white dark:bg-slate-900 
+                m-3 w-44 text-center">
+        <span class="text-3xl font-medium mb-0">
+            <span class="counter-value font-bold" data-target="15">1</span>+
+        </span>
+        <h6 class="text-sm text-slate-400 mt-1 font-semibold">Project Completed</h6>
+    </div>
 
-                        <div class="absolute lg:top-80 md:top-56 top-48 ltr:md:-right-0 ltr:right-2 rtl:md:-left-0 rtl:left-2 p-4 rounded-lg shadow-md dark:shadow-gray-800 bg-white dark:bg-slate-900 m-3 w-44 text-center">
-                            <h6 class="font-semibold">Web Designer</h6>
-                            <h6 class="text-sm text-slate-400 mt-1 font-semibold"> 2 Years Experience</h6>
-                        </div>
-                    </div>
-                </div>
-            </div><!--end container-->
+    <!-- Web Designer Info Box -->
+    <div class="absolute lg:top-80 md:top-56 top-48 ltr:md:-right-0 ltr:right-2 rtl:md:-left-0 rtl:left-2 
+                p-4 rounded-lg shadow-md dark:shadow-gray-800 bg-white dark:bg-slate-900 
+                m-3 w-44 text-center">
+        <h6 class="font-semibold">Web Designer</h6>
+        <h6 class="text-sm text-slate-400 mt-1 font-semibold">2 Years Experience</h6>
+    </div>
+</div>
+
         </section><!--end section-->
         <div class="relative">
             <div class="absolute block w-full h-auto bottom-[25px] z-1 left-0">
@@ -162,7 +170,7 @@
                     <div class="lg:col-span-5 lg:px-8">
                         <div class="relative">
                             <div class="absolute inset-0 border border-gray-200 dark:border-gray-800 rounded-full -mt-[10px] -ms-3 h-[100%] w-[100%] -z-1"></div>
-                            <img src="assets/images/ab2.jpg" class="rounded-full shadow-md shadow-gray-200 dark:shadow-gray-800" alt="">
+                            <img src="assets/images/ddp.png" class="rounded-full shadow-md shadow-gray-200 dark:shadow-gray-800" alt="">
 
                             <div class="absolute lg:bottom-20 md:bottom-10 bottom-6 ltr:lg:-right-16 rtl:lg:-left-16 ltr:md:-right-8 rtl:md:-left-8 ltr:right-0 rtl:left-0 p-4 rounded-lg shadow-md dark:shadow-gray-800 bg-white dark:bg-slate-900 m-3 w-44 text-center">
                                 <h6 class="font-semibold">Web Designer</h6>
@@ -438,13 +446,14 @@ Whether it's developing a custom website from scratch, optimizing an existing pl
                 <div class="grid grid-cols-1 pb-8 text-center">
                     <h3 class="mb-6 md:text-2xl text-xl md:leading-normal leading-normal font-semibold">Work Experience</h3>
 
-                    <p class="text-slate-400 max-w-xl mx-auto text-[15px] font-semibold">Obviously I'm a Web Designer. Web Developer with over 7 years of experience. Experienced with all stages of the development.</p>
+                    <p class="text-slate-400 max-w-xl mx-auto text-[15px] font-semibold"> I'm a Web Designer. Web Developer with over 2+ years of experience. Experienced with all stages of the development.</p>
                 </div><!--end grid-->
 
                 <div class="grid grid-cols-1 mt-8">
                     <div class="relative after:content-[''] after:absolute after:top-0 ltr:md:after:right-0 ltr:md:after:left-0 rtl:md:after:left-0 rtl:md:after:right-0 after:w-px after:h-full md:after:m-auto after:border-s-2 after:border-dashed after:border-gray-200 dark:after:border-gray-700 ms-3 md:ms-0">
                         <!--Start content-->
-                        <div class="ms-8 md:ms-0 relative after:content-[''] after:absolute after:top-[9px] after:rounded-full after:z-10 after:w-2.5 after:h-2.5 after:bg-amber-500 md:after:mx-auto ltr:md:after:right-0 ltr:md:after:left-0 rtl:md:after:left-0 rtl:md:after:right-0 ltr:after:-left-9 rtl:after:-right-9 before:content-[''] before:absolute md:before:mx-auto ltr:md:before:right-0 ltr:md:before:left-0 ltr:before:-left-11 rtl:md:before:left-0 rtl:md:before:right-0 rtl:before:-right-11 before:rounded-full before:z-10 before:border-2 before:border-dashed before:border-gray-200 dark:before:border-gray-700 before:top-0 before:size-7 before:bg-white dark:before:bg-slate-900">
+
+                        <!-- <div class="ms-8 md:ms-0 relative after:content-[''] after:absolute after:top-[9px] after:rounded-full after:z-10 after:w-2.5 after:h-2.5 after:bg-amber-500 md:after:mx-auto ltr:md:after:right-0 ltr:md:after:left-0 rtl:md:after:left-0 rtl:md:after:right-0 ltr:after:-left-9 rtl:after:-right-9 before:content-[''] before:absolute md:before:mx-auto ltr:md:before:right-0 ltr:md:before:left-0 ltr:before:-left-11 rtl:md:before:left-0 rtl:md:before:right-0 rtl:before:-right-11 before:rounded-full before:z-10 before:border-2 before:border-dashed before:border-gray-200 dark:before:border-gray-700 before:top-0 before:size-7 before:bg-white dark:before:bg-slate-900">
                             <div class="grid md:grid-cols-2">
                                 <div class="md:text-end md:me-8 relative">
                                     <img src="assets/images/logos/facebook-logo-2019.png" class="rounded-full size-9 md:ms-auto" alt="">
@@ -457,11 +466,13 @@ Whether it's developing a custom website from scratch, optimizing an existing pl
                                     <p class="mt-3 mb-0 text-slate-400 text-[15px]">The generated injected humour, or non-characteristic words etc. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,</p>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
+
                         <!--End content-->
 
                         <!--Start content-->
-                        <div class="mt-12 ms-8 md:ms-0 relative after:content-[''] after:absolute after:top-[9px] after:rounded-full after:z-10 after:w-2.5 after:h-2.5 after:bg-amber-500 md:after:mx-auto ltr:md:after:right-0 ltr:md:after:left-0 ltr:after:-left-9 rtl:md:after:left-0 rtl:md:after:right-0 rtl:after:-right-9 before:content-[''] before:absolute md:before:mx-auto ltr:md:before:right-0 ltr:md:before:left-0 ltr:before:-left-11 rtl:md:before:left-0 rtl:md:before:right-0 rtl:before:-right-11 before:rounded-full before:z-10 before:border-2 before:border-dashed before:border-gray-200 dark:before:border-gray-700 before:top-0 before:size-7 before:bg-white dark:before:bg-slate-900">
+
+                        <!-- <div class="mt-12 ms-8 md:ms-0 relative after:content-[''] after:absolute after:top-[9px] after:rounded-full after:z-10 after:w-2.5 after:h-2.5 after:bg-amber-500 md:after:mx-auto ltr:md:after:right-0 ltr:md:after:left-0 ltr:after:-left-9 rtl:md:after:left-0 rtl:md:after:right-0 rtl:after:-right-9 before:content-[''] before:absolute md:before:mx-auto ltr:md:before:right-0 ltr:md:before:left-0 ltr:before:-left-11 rtl:md:before:left-0 rtl:md:before:right-0 rtl:before:-right-11 before:rounded-full before:z-10 before:border-2 before:border-dashed before:border-gray-200 dark:before:border-gray-700 before:top-0 before:size-7 before:bg-white dark:before:bg-slate-900">
                             <div class="grid md:grid-cols-2">
                                 <div class="text-start md:ms-8 relative md:order-2">
                                     <img src="assets/images/logos/google-logo.png" class="rounded-full size-9 md:me-auto" alt="">
@@ -474,11 +485,13 @@ Whether it's developing a custom website from scratch, optimizing an existing pl
                                     <p class="mt-3 mb-0 text-slate-400 text-[15px]">The generated injected humour, or non-characteristic words etc. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,</p>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
+
                         <!--End content-->
 
                         <!--Start content-->
-                        <div class="mt-12 ms-8 md:ms-0 relative after:content-[''] after:absolute after:top-[9px] after:rounded-full after:z-10 after:w-2.5 after:h-2.5 after:bg-amber-500 md:after:mx-auto ltr:md:after:right-0 ltr:md:after:left-0 ltr:after:-left-9 rtl:md:after:left-0 rtl:md:after:right-0 rtl:after:-right-9 before:content-[''] before:absolute md:before:mx-auto ltr:md:before:right-0 ltr:md:before:left-0 ltr:before:-left-11 rtl:md:before:left-0 rtl:md:before:right-0 rtl:before:-right-11 before:rounded-full before:z-10 before:border-2 before:border-dashed before:border-gray-200 dark:before:border-gray-700 before:top-0 before:size-7 before:bg-white dark:before:bg-slate-900">
+
+                        <!-- <div class="mt-12 ms-8 md:ms-0 relative after:content-[''] after:absolute after:top-[9px] after:rounded-full after:z-10 after:w-2.5 after:h-2.5 after:bg-amber-500 md:after:mx-auto ltr:md:after:right-0 ltr:md:after:left-0 ltr:after:-left-9 rtl:md:after:left-0 rtl:md:after:right-0 rtl:after:-right-9 before:content-[''] before:absolute md:before:mx-auto ltr:md:before:right-0 ltr:md:before:left-0 ltr:before:-left-11 rtl:md:before:left-0 rtl:md:before:right-0 rtl:before:-right-11 before:rounded-full before:z-10 before:border-2 before:border-dashed before:border-gray-200 dark:before:border-gray-700 before:top-0 before:size-7 before:bg-white dark:before:bg-slate-900">
                             <div class="grid md:grid-cols-2">
                                 <div class="md:text-end md:me-8 relative">
                                     <img src="assets/images/logos/lenovo-logo.png" class="rounded-full size-9 md:ms-auto" alt="">
@@ -492,15 +505,16 @@ Whether it's developing a custom website from scratch, optimizing an existing pl
                                 </div>
                             </div>
                         </div>
+                         -->
                         <!--End content-->
 
                         <!--Start content-->
                         <div class="mt-12 ms-8 md:ms-0 relative after:content-[''] after:absolute after:top-[9px] after:rounded-full after:z-10 after:w-2.5 after:h-2.5 after:bg-amber-500 md:after:mx-auto ltr:md:after:right-0 ltr:md:after:left-0 ltr:after:-left-9 rtl:md:after:left-0 rtl:md:after:right-0 rtl:after:-right-9 before:content-[''] before:absolute md:before:mx-auto ltr:md:before:right-0 ltr:md:before:left-0 ltr:before:-left-11 rtl:md:before:left-0 rtl:md:before:right-0 rtl:before:-right-11 before:rounded-full before:z-10 before:border-2 before:border-dashed before:border-gray-200 dark:before:border-gray-700 before:top-0 before:size-7 before:bg-white dark:before:bg-slate-900">
                             <div class="grid md:grid-cols-2">
                                 <div class="text-start md:ms-8 relative md:order-2">
-                                    <img src="assets/images/logos/circle-logo.png" class="rounded-full size-9 md:me-auto" alt="">
-                                    <h5 class="my-2 font-semibold text-lg">Circle CI</h5>
-                                    <h6 class="text-sm mb-0">2015-16</h6>
+                                    <!-- <img src="assets/images/logos/red_nobg.png" class=" size-9 md:me-auto" alt=""> -->
+                                    <h5 class="my-2 font-semibold text-lg">Mckodev Tech Lab</h5>
+                                    <h6 class="text-sm mb-0">2024- Present</h6>
                                 </div>
 
                                 <div class="ltr:float-left rtl:float-right md:text-end md:me-8 mt-6 md:mt-0 md:order-1">
@@ -898,7 +912,7 @@ I emphasized clean layouts, consistent branding, accessible design, and mobile r
     
                                 <div class="flex-1 ms-6">
                                     <h5 class="text-[17px] dark:text-white mb-2 font-medium">Phone</h5>
-                                    <a href="tel:+152534-468-854" class="text-slate-400 text-[15px]">+234 813-370-8340</a>
+                                    <a href="tel:+2348133708340" class="text-slate-400 text-[15px]">+234 813-370-8340</a>
                                 </div>
                             </div>
     
@@ -950,11 +964,11 @@ I emphasized clean layouts, consistent branding, accessible design, and mobile r
                         <ul class="lg:col-span-4 list-none md:text-end text-center mt-6 md:mt-0">
                             <!-- <li class="inline"><a href="https://dribbble.com/shreethemes" target="_blank" class="btn btn-icon btn-sm border border-gray-700 rounded-md hover:border-amber-500 dark:hover:border-amber-500 hover:bg-amber-500 dark:hover:bg-amber-500"><i class="uil uil-dribbble align-middle" title="dribbble"></i></a></li> -->
                             <!-- <li class="inline"><a href="https://www.behance.net/shreethemes" target="_blank" class="btn btn-icon btn-sm border border-gray-700 rounded-md hover:border-amber-500 dark:hover:border-amber-500 hover:bg-amber-500 dark:hover:bg-amber-500"><i class="uil uil-behance" title="Behance"></i></a></li> -->
-                            <li class="inline"><a href="http://linkedin.com/company/shreethemes" target="_blank" class="btn btn-icon btn-sm border border-gray-700 rounded-md hover:border-amber-500 dark:hover:border-amber-500 hover:bg-amber-500 dark:hover:bg-amber-500"><i class="uil uil-linkedin" title="Linkedin"></i></a></li>
-                            <li class="inline"><a href="https://www.facebook.com/shreethemes" target="_blank" class="btn btn-icon btn-sm border border-gray-700 rounded-md hover:border-amber-500 dark:hover:border-amber-500 hover:bg-amber-500 dark:hover:bg-amber-500"><i class="uil uil-facebook-f align-middle" title="facebook"></i></a></li>
-                            <li class="inline"><a href="https://www.instagram.com/shreethemes/" target="_blank" class="btn btn-icon btn-sm border border-gray-700 rounded-md hover:border-amber-500 dark:hover:border-amber-500 hover:bg-amber-500 dark:hover:bg-amber-500"><i class="uil uil-instagram align-middle" title="instagram"></i></a></li>
-                            <li class="inline"><a href="https://twitter.com/shreethemes" target="_blank" class="btn btn-icon btn-sm border border-gray-700 rounded-md hover:border-amber-500 dark:hover:border-amber-500 hover:bg-amber-500 dark:hover:bg-amber-500"><i class="uil uil-twitter align-middle" title="twitter"></i></a></li>
-                            <li class="inline"><a href="mailto:support@shreethemes.in" class="btn btn-icon btn-sm border border-gray-700 rounded-md hover:border-amber-500 dark:hover:border-amber-500 hover:bg-amber-500 dark:hover:bg-amber-500"><i class="uil uil-envelope align-middle" title="email"></i></a></li>
+                            <li class="inline"><a href="#" target="_blank" class="btn btn-icon btn-sm border border-gray-700 rounded-md hover:border-amber-500 dark:hover:border-amber-500 hover:bg-amber-500 dark:hover:bg-amber-500"><i class="uil uil-linkedin" title="Linkedin"></i></a></li>
+                            <li class="inline"><a href="https://www.facebook.com/share/19bVikVva1/" target="_blank" class="btn btn-icon btn-sm border border-gray-700 rounded-md hover:border-amber-500 dark:hover:border-amber-500 hover:bg-amber-500 dark:hover:bg-amber-500"><i class="uil uil-facebook-f align-middle" title="facebook"></i></a></li>
+                            <li class="inline"><a href="https://www.instagram.com/titobioluwa__?igsh=a2t4am9od2p1dTNk" target="_blank" class="btn btn-icon btn-sm border border-gray-700 rounded-md hover:border-amber-500 dark:hover:border-amber-500 hover:bg-amber-500 dark:hover:bg-amber-500"><i class="uil uil-instagram align-middle" title="instagram"></i></a></li>
+                            <!-- <li class="inline"><a href="https://twitter.com/shreethemes" target="_blank" class="btn btn-icon btn-sm border border-gray-700 rounded-md hover:border-amber-500 dark:hover:border-amber-500 hover:bg-amber-500 dark:hover:bg-amber-500"><i class="uil uil-twitter align-middle" title="twitter"></i></a></li> -->
+                            <li class="inline"><a href="mailto:support@fatuberuayomide123@gmail.com" class="btn btn-icon btn-sm border border-gray-700 rounded-md hover:border-amber-500 dark:hover:border-amber-500 hover:bg-amber-500 dark:hover:bg-amber-500"><i class="uil uil-envelope align-middle" title="email"></i></a></li>
                         </ul><!--end icon-->
                     </div><!--end grid-->
                 </div><!--end container-->
