--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <title>Tobiloba Personal Portfolio</title>
     <!-- <meta name="description" content="Responsive Tailwind CSS Template"> -->
     <meta name="keywords" content="Onepage, creative, modern, Tailwind CSS, multipurpose, clean">
-    <meta name="author" content="Shreethemes">
-    <meta name="website" content="https://shreethemes.in/">
-    <meta name="email" content="support@shreethemes.in">
+    <!-- <meta name="author" content="Shreethemes"> -->
+    <!-- <meta name="website" content="https://shreethemes.in/"> -->
+    <!-- <meta name="email" content="support@shreethemes.in"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <meta name="version" content="1.0.0">
 
