--- a/index.html
+++ b/index.html
@@ -116,11 +116,11 @@
                         <p class="text-slate-400 max-w-xl font-semibold"> I'm a Web Designer. Web Developer with over 2 years of experience. Experienced with all stages of the development.</p>
                     
                        <div class="mt-6">
-    <a href="assets/docs/Tobiloba-CV.pdf" download 
+    <a href="assets/docs/FATUBERUTobiAyomide TechCV.pdf" download 
         target="_blank" 
         rel="noopener noreferrer" class="btn bg-amber-500 hover:bg-amber-600 border-amber-500 hover:border-amber-600 text-white rounded-md">Hire Me</a>
     <a 
-        href="assets/docs/Tobiloba-CV.pdf" 
+        href="assets/docs/FATUBERUTobiAyomide TechCV.pdf" 
         class="btn bg-amber-500/10 hover:bg-amber-500 border-amber-500/10 hover:border-amber-500 text-amber-500 hover:text-white rounded-md ms-1"
         download 
         target="_blank" 
