--- a/index.html
+++ b/index.html
@@ -803,7 +803,7 @@ I emphasized clean layouts, consistent branding, accessible design, and mobile r
                                 <div class="text-center mt-5">
                                     <img src="assets/images/client/06.jpg" class="size-14 rounded-full shadow-md mx-auto mb-1" alt="">
                                     <a href="#" class="text-base font-medium h5 hover:text-amber-500 duration-500 ease-in-out">Janisha Doll</a>
-                                    <span class="text-slate-400 text-sm block">Manager</span>
+                                    <span class="text-slate-400 text-sm block">Managerrrrr</span>
                                 </div>
                             </div>
                             <!-- Content -->
