--- a/index.html
+++ b/index.html
@@ -962,7 +962,7 @@ I emphasized clean layouts, consistent branding, accessible design, and mobile r
 
 
                         <div class="lg:col-span-5 text-center mt-6 md:mt-0">
-                            <p class="mb-0">© <script>document.write(new Date().getFullYear())</script> Tobiloba. Design with <i class="mdi mdi-heart text-red-600"></i> by <a>Tobiloba</a>.</p>
+                            <p class="mb-0">© <script>document.write(new Date().getFullYear())</script> Tobiloba. Design by <a>Tobiloba</a>.</p>
                         </div>
 
                         <ul class="lg:col-span-4 list-none md:text-end text-center mt-6 md:mt-0">
