--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@ Whether it's developing a custom website from scratch, optimizing an existing pl
                     <p class="text-white/80 max-w-xl mx-auto text-[15px] font-semibold">  I'm currently available for freelance web design and development projects feel free to reach out if you need a modern, responsive, and user-focused website. </p>
                 
                     <div class="relative mt-8">
-                        <a href="#" class="btn bg-amber-500 hover:bg-amber-600 border-amber-500 hover:border-amber-600 text-white rounded-md">Hire Me</a>
+                         <a href="assets/docs/FATUBERUTobiAyomide TechCV.pdf" download target="_blank" rel="noopener noreferrer" class="btn bg-amber-500 hover:bg-amber-600 border-amber-500 hover:border-amber-600 text-white rounded-md">Hire Me</a>
                     </div>
                 </div><!--end grid-->
             </div><!--end container-->
