--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@ Whether it's developing a custom website from scratch, optimizing an existing pl
                 <div class="grid grid-cols-1 pb-8 text-center">
                     <h3 class="mb-6 md:text-2xl text-xl md:leading-normal leading-normal font-semibold">What do i offer?</h3>
 
-                    <p class="text-slate-400 max-w-xl mx-auto text-[15px] font-semibold">  I offer full-service web development, including responsive front-end design, custom web applications, e-commerce solutions, performance optimization, SEO-friendly coding, website maintenance, and secure deployment, delivering modern, scalable, and user centered websites tailored to your brand and business objectives. </p>
+                    <p class="text-slate-400 max-w-xl mx-auto text-[15px] font-semibold">  I offer full service web development, including responsive front-end design, custom web applications, e-commerce solutions, performance optimization, SEO-friendly coding, website maintenance, and secure deployment, delivering modern, scalable, and user centered websites tailored to your brand and business objectives. </p>
                 </div><!--end grid-->
 
                 <div class="grid lg:grid-cols-3 md:grid-cols-2 grid-cols-1 mt-8 gap-[30px]">
@@ -772,9 +772,9 @@ I emphasized clean layouts, consistent branding, accessible design, and mobile r
                                 </div>
                                 
                                 <div class="text-center mt-5">
-                                    <img src="assets/images/client/02.jpg" class="size-14 rounded-full shadow-md mx-auto mb-1" alt="">
+                                    <img src="assets/images/client/okiki.jpg" class="size-14 rounded-full shadow-md mx-auto mb-1" alt="">
                                     <a href="#" class="text-base font-medium h5 hover:text-amber-500 duration-500 ease-in-out">Okiki</a>
-                                    <span class="text-slate-400 text-sm block">Manager</span>
+                                    <span class="text-slate-400 text-sm block">Full Stack</span>
                                 </div>
                             </div>
                             <!-- Content -->
@@ -941,7 +941,7 @@ I emphasized clean layouts, consistent branding, accessible design, and mobile r
                 <div class="grid grid-cols-1 pb-8  text-center">
                     <h3 class="mb-6 md:text-2xl text-xl md:leading-normal leading-normal font-semibold">Get In Touch !</h3>
 
-                    <p class="text-slate-400 max-w-xl mx-auto text-[15px] font-semibold">Whether you’re starting a new project, need help improving an existing website, or just want to connect. I’d love to hear from you. I’m available for freelance work, collaborations, or full-time opportunities. Let’s build something great together.</p>
+                    <p class="text-slate-400 max-w-xl mx-auto text-[15px] font-semibold">Whether you’re starting a new project, need help improving an existing website, or just want to connect. I’d love to hear from you. I’m available for freelance work, collaborations, or full-time opportunities. Let’s build something great together.     I love to hear from you. Whether you have a question or just want to chat about design, tech — shoot me a message.</p>
                 </div><!--end grid-->
 
                 <div class="grid grid-cols-1 lg:grid-cols-12 md:grid-cols-2 mt-8 items-center gap-[30px]">
