--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 </div>
 
 
-<style>
+<!-- <style>
     /* Fullscreen loader container */
 #loader {
   position: fixed;
@@ -102,7 +102,7 @@
 }
 
 
-</style>
+</style> -->
        
      <!-- Loader End -->
 
